--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
         "redux-thunk": "^2.3.0",
         "sass": "^1.90.0",
         "slick-carousel": "^1.8.1",
-        "typescript": "^4.3.2"
+        "typescript": "^4.3.2",
+        "utf-8-validate": "^6.0.5"
     },
     "scripts": {
         "start": "react-scripts start",
